--- a/EasyDatabaseUpdater/EasyDatabaseUpdater/EasyDatabaseUpdater.csproj
+++ b/EasyDatabaseUpdater/EasyDatabaseUpdater/EasyDatabaseUpdater.csproj
@@ -46,16 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="ServerSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ServerSelectForm.Designer.cs">
+      <DependentUpon>ServerSelectForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TableSelectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TableSelectForm.Designer.cs">
+      <DependentUpon>TableSelectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="ServerSelectForm.resx">
+      <DependentUpon>ServerSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TableSelectForm.resx">
+      <DependentUpon>TableSelectForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
