--- a/EasyDatabaseUpdater/EasyDatabaseUpdater/EasyDatabaseUpdater.csproj
+++ b/EasyDatabaseUpdater/EasyDatabaseUpdater/EasyDatabaseUpdater.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExcelExportImportTool.cs" />
     <Compile Include="ServerSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
