--- a/EasyDatabaseUpdater/EasyDatabaseUpdater/EasyDatabaseUpdater.csproj
+++ b/EasyDatabaseUpdater/EasyDatabaseUpdater/EasyDatabaseUpdater.csproj
@@ -46,7 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add.cs" />
+    <Compile Include="Delete.cs" />
     <Compile Include="ExcelExportImportTool.cs" />
+    <Compile Include="IModification.cs" />
     <Compile Include="ServerSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +64,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Update.cs" />
     <EmbeddedResource Include="ServerSelectForm.resx">
       <DependentUpon>ServerSelectForm.cs</DependentUpon>
     </EmbeddedResource>
